# watchcat.server

./: .env.docker  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  api.md  docker-compose.yml  dockerfile  install.sh  readme.md  sqlmap_test.py
.github/workflows/: ci.yml  rustfmt.yml
for_science_fair/: intro_zhtw.md
src/: config.rs  database.rs  lib.rs  main.rs
src/routers/: card_login.rs  card_reg.rs  console.rs  mod.rs  query_cards.rs  reserve.rs  room_status.rs  token_login.rs  user_auth.rs  user_login.rs
static/: login.html  teapot.html
