[package]
name = "watchcat-server"
version = "0.1.0"
edition = "2021"
authors = [ "Brian Duan", "HPK-dev" ]
description = "The backend of our project `watchcat` for 2024 Taiwan science fair."
repository = "https://github.com/HPK-dev/watchcat.server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
serde = { version = "~1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sqlx = { version = "0.7", features = [ "runtime-tokio" ,"sqlite" ] }
tracing = "0.1.40"
tracing-subscriber = { version = "~0.3.18", features = ["env-filter"] } 
actix-web = "4"
tracing-actix-web = "0.7"
tokio = {version = "1.34",features = ["full"]}
dotenv = "0.15.0"
jsonwebtoken = "9.2.0"
futures-util = "0.3.29"
reqwest = "0.11.22"
regex = "1.10.2"
