[package]
name = "watchcat-server"
version = "0.1.0"
edition = "2021"
authors = [ "Brian Duan", "HPK-dev" ]
description = "The backend of our project `watchcat` for 2024 Taiwan science fair."
repository = "https://github.com/HPK-dev/watchcat.server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
serde = { version = "~1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sqlx = { version = "0.7", features = [ "runtime-tokio" ,"sqlite","chrono" , "mysql" ] }
chrono = {vesion= "0.4.33" , features = ["serde"]}
actix-web = "4.5"
actix-cors = "0.7.0"
tokio = {version = "1.34",features = ["full"]}
google-oauth = "1.10.1"
futures-util = "0.3.29"
regex = "1.10.2"
lazy_static = "1.4.0"
env_logger = "0.11.1"
log = "0.4.20"
dotenvy = "0.15.7"

