[package]
name = "watchcat-server"
version = "0.1.0"
edition = "2021"
authors = ["Brian Duan", "HPK-dev"]
description = "The backend of our project `watchcat` for 2024 Taiwan science fair."
repository = "https://github.com/HPK-dev/watchcat.server"

[dependencies]
# database
sqlx = { version = "0.7", features = ["runtime-tokio", "chrono", "mysql"] }
chrono = { vesion = "0.4.33", features = ["serde"] }

# logging
env_logger = { version = "0.11.1", features = ["color"] }
log = "0.4.20"
anstyle = "1.0.6"

# json parser
serde = { version = "~1.0.193", features = ["derive"] }
serde_json = "1.0.108"

# web frramework
tokio = { version = "1.34" }
actix-web = "4.5"
actix-cors = "0.7.0"

# Google login auth
google-oauth = "1.10.1"

# utils
anyhow = "1.0"
futures-util = "0.3.29"
regex = "1.10.2"
lazy_static = "1.4.0"
dotenvy = "0.15.7"
